Ensure scrollbar always shows

--- a/relive-simulator-client/src/main/resources/style.css
+++ b/relive-simulator-client/src/main/resources/style.css
@@ -1,3 +1,7 @@
+body {
+    overflow-y: scroll;
+}
+
 .cm-editor {
     height: 100%
 }
